--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -77,7 +77,7 @@ h2 {
   display: inline-block;
   color: $nav-color;
   background-color: $green;
-  right: 18%;
+  right: 24%;
   width: 110px;
   top: -1px;
   text-align: center;
