--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -157,7 +157,7 @@
     }
 
     a {
-      padding: 1.8em .8em;
+      padding: 1.85em .8em;
       border-bottom: none;
       text-decoration: none;
       color: $nav-color;
