--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -117,7 +117,7 @@ sub {
 }
 
 .bold {
-  font-weight: bold;
+  font-weight: 400;
 }
 
 .italic {
